prevent <code> from overflowing layout

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -412,4 +412,5 @@ form.testing-pref p {
 
 pre.test-html {
   overflow: auto; /* tables are wide; helpful for mobile */
+  max-width: 650px;
 }
